[tool.poetry]
name = "transportfootprint"
version = "0.1.0"
description = ""
authors = ["Florian Scheidl <florian.scheidl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
flightradarapi = "^1.3.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
